[package]
name = "alipay-global"
version = "0.1.0"
edition = "2021"
description = "Use Alipay Global in a less painful way"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rsa = "0.3"
rust-crypto = "^0.2"
base64 = "0.12.3"
ureq = { version = "2.7.1", features = ["json", "charset"] }
url = "2.4.0"
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
strum = "0.25"
strum_macros = "0.25"
