[package]
name = "alipay-global"
version = "0.1.4"
edition = "2021"
description = "Use Alipay Global in a less painful way"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zhenhao-ma/alipay-global"
authors = [
    "zma <bob0103779@gmail.com>",
    "larry <larryluyy@gmail.com>",
] # Add this line automatically
documentation = "https://docs.rs/latest/alipay-global/latest"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rsa = "0.6.1"
base64 = "0.21.2"
ureq = { version = "2.7.1", features = ["json", "charset"] }
url = "2.4.0"
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
strum = "0.25"
strum_macros = "0.25"
sha2 = "0.10.2"

# This will implicitly includes a feature declaration
# [features]
# juniper = ["dep:juniper"]
# You can explicitly override this feature settings to includes additional dependencies
juniper = { version = "0.15.11", features = ["uuid"] }

[features]
juniper = []
